@@ -38,6 +38,7 @@ public:
     WKBundlePageRef page() const { return m_page; }
 
 private:
+    // Loader Client
     static void _didStartProvisionalLoadForFrame(WKBundlePageRef page, WKBundleFrameRef frame, const void *clientInfo);
     static void _didReceiveServerRedirectForProvisionalLoadForFrame(WKBundlePageRef page, WKBundleFrameRef frame, const void *clientInfo);
     static void _didFailProvisionalLoadWithErrorForFrame(WKBundlePageRef page, WKBundleFrameRef frame, const void *clientInfo);
@@ -46,7 +47,6 @@ private:
     static void _didFailLoadWithErrorForFrame(WKBundlePageRef page, WKBundleFrameRef frame, const void *clientInfo);
     static void _didReceiveTitleForFrame(WKBundlePageRef page, WKStringRef title, WKBundleFrameRef frame, const void *clientInfo);
     static void _didClearWindowForFrame(WKBundlePageRef page, WKBundleFrameRef frame, JSContextRef ctx, JSObjectRef window, const void *clientInfo);
-
     void didStartProvisionalLoadForFrame(WKBundleFrameRef frame);
     void didReceiveServerRedirectForProvisionalLoadForFrame(WKBundleFrameRef frame);
     void didFailProvisionalLoadWithErrorForFrame(WKBundleFrameRef frame);
@@ -55,6 +55,10 @@ private:
     void didFailLoadWithErrorForFrame(WKBundleFrameRef frame);
     void didReceiveTitleForFrame(WKStringRef title, WKBundleFrameRef frame);
     void didClearWindowForFrame(WKBundleFrameRef frame, JSContextRef ctx, JSObjectRef window);
+
+    // UI Client
+    static void _addMessageToConsole(WKBundlePageRef page, WKStringRef message, uint32_t lineNumber, const void *clientInfo);
+    void addMessageToConsole(WKStringRef message, uint32_t lineNumber);
 
     WKBundlePageRef m_page;
 };
