@@ -2,6 +2,18 @@
 
         Reviewed by Anders Carlsson.
 
+        Add support for dumping the contents of messages to the console to WebKitTestRunner
+
+        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.cpp:
+        (WTR::InjectedBundlePage::InjectedBundlePage):
+        (WTR::InjectedBundlePage::_addMessageToConsole):
+        (WTR::InjectedBundlePage::addMessageToConsole):
+        * WebKitTestRunner/InjectedBundle/InjectedBundlePage.h:
+
+2010-07-06  Sam Weinig  <sam@webkit.org>
+
+        Reviewed by Anders Carlsson.
+
         Patch for https://bugs.webkit.org/show_bug.cgi?id=41708
         Add dumpAsText support for WebKitTestRunner
 
